2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/log.c: Replaced use of includes.h
	by respective direct includes.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/rules.c: Replaced use of includes.h
	by respective direct includes. Replaced occurences of EXIT()
	by exit().

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/comm.c: Removed uselsess defines of FALSE and TRUE.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/comm.c: Replaced use of includes.h
	by respective direct includes. Replaced occurences of EXIT()
	by exit().

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/parser.c: Removed TODO as it refers to
	openvas-client which is not relevant anymore in this case.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/parser.c: Replaced use of includes.h
	by respective direct includes.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/pluginscheduler.c (scheduler_plugin_score,
	scheduler_plugin_best_score): Removed functions that
	were disabled and marked as broken anyway.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/pluginscheduler.c: Replaced use of includes.h
	by respective direct includes.

2010-12-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* cnvts/find_service/find_service.c: Made several functions
	static. These are not needed externally.

2010-12-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* cnvts/find_service/find_service.c,
	cnvts/openvas_tcp_scanner/openvas_tcp_scanner.c: Replaced
	use of includes.h by respective direct includes.

	* cnvts/synscan/synscan.c: Replaced use of includes.h by
	respective direct includes. Also removed inclusion of
	the openvastcp.h which is only relevant for absence
	of netinet.

	* cnvts/synscan/openvastcp.h, cnvts/synscan/openvasicmp.h,